# AlyCompilerOld

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  README.org  code.S  dev-changelog.md  example  example.aly  grammar.bnf  isel-grammar.bnf  manifest_hash.txt  math.aly  my_test  simple  simple.aly
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue--bug-report.md  issue--feature-request.md  other-issues--blank-template.md
Docs/: ASM-Compilation-Guide.txt  BUG_FIXES.md  Bibliography.md  Feature-Ideas.md  How-To-Build-In-GCC.md  How-To-Build-In-GCC.txt  Ideas.md  TODO.md  TOOD.md  VISUAL_STUDIO.org
Documents/: ASM-Compilation-Guide.md  ASM-Compilation-Guide.txt  AT&T-x86_64-ASM.md  BUG_FIXES.md  Bibliography.md  C-Printf-Formats.md  Codegen-Redesign.md  Feature-Ideas.md  How-To-Build-In-GCC.md  Ideas.md  LinkNotes.md  LinkNotes.txt  TODO.md  VISUAL_STUDIO.org
Editor/: int-ir-mode.el  int-isel-mode.el  int-mode.el  int-ts-mode.el
Editor/int/: README.txt
Scripts/: GenerateProject.sh  UpdateFileHashes.py  Win-GenerateProject.bat
bld/: AlyCompiler.sln
editor/: int-ir-mode.el  int-isel-mode.el  int-mode.el  int-ts-mode.el
editor/int/: README.md
editor/int-isel/ftdetect/: int-isel.vim
editor/int-isel/ftplugin/: int-isel.vim
editor/int-isel/syntax/: int-isel.vim
editor/int/ftdetect/: int.vim
editor/int/ftplugin/: int.vim
editor/int/syntax/: int.vim
src/: codegen.c  codegen.h  environment.c  environment.h  error.c  error.h  file_io.c  file_io.h  main.c  parser.c  parser.h  test.S  typechecker.c  typechecker.h
